# ROS_Smart_Mobility

./: README.md  SM_action_image_processor_client.cpp
Week3/: SM_week3_lab.sh
Week4/: README.md  SM_week4_configuring_environment.sh  SM_week4_turtlesim, rqt.sh
Week5/: README.md  SM_week5_lab_tutorial_intermediate.sh
Week6/: README.md  SM_week6_allocator.sh  SM_week6_fast_dds.sh  SM_week6_fastdds_middleware.sh  SM_week6_topic_stats.sh  SM_week7_reading_node.sh
Week7/: CMakeLists.txt  README.md  SM_action_image_processor_server.cpp  package.xml
emotion_recognition/bag_files/: metadata.yaml
fleet_management/: README.md  package.xml  setup.py
fleet_management/action/: FleetManagement.action
fleet_management/fleet_management/: fleet_management_cli.py  fleet_management_client_cli.py  fleet_management_server_cli.py
fleet_management/launch/: fleet_management_launch.py
