<?xml version="1.0"?>
<package format="3">
  <name>ros2_cv_action_project</name>
  <version>0.0.1</version>
  <description>ROS 2 Computer Vision Action Project</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend<rclcpp_action</build_depend>
  <build_depend>example_interfaces</build_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend<rclcpp_action</exec_depend>
  <exec_depend>example_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

