<?xml version="1.0"?>
<package format="3">
  <name>fleet_management</name>
  <version>0.0.1</version>
  <description>ROS 2 package for fleet management</description>
  <maintainer email="vahidovakbarali@gmail.com">Ali</maintainer>
  <license>Apache License 2.0</license>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
 
  <export>
    <build_type>ament_python</build_type>
  </export>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <!-- Add more dependencies as needed -->

  <!-- Add other optional tags like export and test_depend if necessary -->

</package>

